# Care-Guard1

./: .env.example  .gitignore  README.md  api_create_chat.md  api_create_event.md  api_create_message.md  api_list_chats.md  clean_connect-remote-agent.txt  clean_introduction.txt  clean_setup.txt  extract-text.ts  index.html  metadata.json  package-lock.json  package.json  server.ts  test-fetch.ts  vercel.json
.claude/: settings.json
api/: server.js  server.ts
band-agents/: .gitignore  agent_config.yaml.example  agents.py  pyproject.toml
band-agents/careguard_band_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: App.tsx  types.ts
src/components/: AgentStatusList.tsx  IntakeForm.tsx  RiskGauge.tsx
src/lib/: band.ts  db.ts
src/models/: CaseModel.ts  MessageModel.ts
